# separable_jaws_bringup

./: CMakeLists.txt  README.md  package.xml
config/: separable_jaws_controllers.yaml
launch/: control.launch.py
test/: joint_trajectory_controller_test.cpp
