<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>separable_jaws_bringup</name>
    <version>0.0.0</version>
    <description>Package with launch files and run-time configurations for separable_jaws.</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">Quantumspawner</author>
    <license>TODO</license>

    <!-- general dependencies -->
    <depend>control_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- execute dependencies -->
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>ros2_control</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>separable_jaws_description</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
